# fyndkartan

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE-REVIEWS.md  Caddyfile  DOCKER.md  Dockerfile  HANDOFF.md  ICA-ECOM-API.md  README.md  REVIEW.md  ROADMAP.md  STATS.md  UNIFIED-API.md  backlog.md  docker-compose.dev.yml  docker-compose.hetzner.yml  docker-compose.pg.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
api/: apilog.py  auth.py  brands.py  catalog.py  catalog_crawl.py  categories.py  config.py  countries.py  database.py  deps.py  details.py  diet.py  embeddings.py  geo.py  ica_ecom.py  images.py  main.py  manufacturers.py  matching.py  migrate_to_pg.py  offers.py  schemas.py  settings.py  store_crawl.py  store_measure.py  sync.py  tags.py
api/adapters/: __init__.py  axfood_common.py  axfood_offers.py  base.py  citygross.py  citygross_offers.py  coop.py  coop_offers.py  hemkop.py  ica.py  ica_offers.py  ica_token.py  keys.py  lidl.py  willys.py
api/database/: __init__.py  _conn.py  basket.py  catalog.py  crawl_runs.py  ean.py  meta.py  offers.py  products.py  schema.py  store_prices.py  stores.py  tables.py  zone.py
api/routes/: __init__.py  admin_vocab.py  compare.py  products.py  stores.py
tests/: test_auth.py  test_compare.py  test_logic.py  test_reads.py  test_schemas.py
web/: admin.html  admin.js  app.js  index.html  style.css
