[project]
name = "fyndkartan"
version = "0.1.0"
description = "Fyndkartan - unified store & offers API för svenska matbutikskedjor (ICA, Coop, Willys, Hemköp, Lidl) + kartvy"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "croniter>=2.0",
    "tzdata>=2024.1",
    "bcrypt>=4.1",
    "itsdangerous>=2.1",
]
